--- a/app/views/allocated_tasks/index.html.erb
+++ b/app/views/allocated_tasks/index.html.erb
@@ -46,7 +46,7 @@
                     <li>
                         <a class="col-md-12" href="#" onclick="swap('<%= name %>'+'assigned');return false;"> 
                             <p class="col-md-8 writer-label"><%= name %></p>
-                            <p id="<%= name + 'ajax' %>" class="col-md-4 writer-label"><%= count.to_s + " tasks"%></p>
+                            <p id="<%= name.delete(' ') + 'ajax' %>" class="col-md-4 writer-label"><%= count.to_s + " tasks"%></p>
                         </a>
                         <%if @assigned_writer_dict[id].present?%>
                             <ul id="<%= name + 'assigned' %>" style="display: none;">
@@ -54,7 +54,7 @@
                                   <%if o.oppty.present?%>
                                     <li id="<%= o.id%>" class="col-md-12">
                                         <h5 class="col-md-11"><%= link_to o.oppty.opptyName, o.oppty%></h5>
-                                        <img id="delete-btn-manager" class="btn-x-manager" onclick="deleteOptManager(<%= o.id %>, <%= name + 'ajax' %>, 0)" src="/assets/redx.png" alt="X" border="0"/>
+                                        <img id="delete-btn-manager" class="btn-x-manager" onclick="deleteOptManager(<%= o.id %>, <%= name.delete(' ') + 'ajax' %>, 0)" src="/assets/redx.png" alt="X" border="0"/>
                                     </li>
                                   <%end%>
                                 <%end%>
@@ -76,7 +76,7 @@
                     <li>
                         <a class="col-md-12" href="#" onclick="swap('<%= name %>'+'todo');return false;">
                             <p class="col-md-8 writer-label"><%= name %> </p>
-                            <p id="<%= name + 'ajax' %>" class="col-md-4 writer-label"><%= count.to_s + " tasks"%></p>
+                            <p id="<%= name.delete(' ') + 'ajax' %>" class="col-md-4 writer-label"><%= count.to_s + " tasks"%></p>
                         </a>
                         <%if @todo_writer_dict[id].present? %>
                             <ul id="<%= name + 'todo' %>" style="display: none;">
@@ -84,7 +84,7 @@
                                     <% if o.oppty.present?%>
                                         <li id="<%= o.id%>" class="col-md-12">
                                             <h5 class="col-md-11"><%= link_to o.oppty.opptyName, o.oppty%></h5>
-                                            <img id="delete-btn-manager-1" class="btn-x-manager" onclick="deleteOptManager(<%= o.id %>, <%= name + 'ajax' %>, 1)" src="/assets/redx.png" alt="X" border="0"/>
+                                            <img id="delete-btn-manager-1" class="btn-x-manager" onclick="deleteOptManager(<%= o.id %>, <%= name.delete(' ') + 'ajax' %>, 1)" src="/assets/redx.png" alt="X" border="0"/>
                                         </li>
                                     <% end %>
                                 <%end%>
@@ -106,7 +106,7 @@
                     <li>
                         <a class="col-md-12" href="#" onclick="swap('<%= name %>'+'doing');return false;">
                             <p class="col-md-8 writer-label"><%= name %> </p>
-                            <p id="<%= name + 'ajax' %>" class="col-md-4 writer-label"><%= count.to_s + " tasks"%></p>
+                            <p id="<%= name.delete(' ') + 'ajax' %>" class="col-md-4 writer-label"><%= count.to_s + " tasks"%></p>
                         </a>
                         <%if @doing_writer_dict[id].present?%>
                             <ul id="<%= name + 'doing'%>" style="display: none;">
@@ -114,7 +114,7 @@
                                   <%if o.oppty.present?%>
                                     <li id="<%= o.id%>" class="col-md-12">
                                         <h5 class="col-md-11"><%= link_to o.oppty.opptyName, o.oppty%></h5>
-                                        <img id="delete-btn-manager-2" class="btn-x-manager" onclick="deleteOptManager(<%= o.id %>, <%= name + 'ajax' %>, 2)" src="/assets/redx.png" alt="X" border="0"/>
+                                        <img id="delete-btn-manager-2" class="btn-x-manager" onclick="deleteOptManager(<%= o.id %>, <%= name.delete(' ') + 'ajax' %>, 2)" src="/assets/redx.png" alt="X" border="0"/>
                                     </li>
                                   <%end%>
                                 <%end%>
@@ -136,7 +136,7 @@
                     <li>
                         <a class="col-md-12" href="#" onclick="swap('<%= name %>'+'done');return false;">
                             <p class="col-md-8 writer-label"><%= name %> </p>
-                            <p id="<%= name + 'ajax' %>" class="col-md-4 writer-label"><%= count.to_s + " tasks"%></p>
+                            <p id="<%= name.delete(' ') + 'ajax' %>" class="col-md-4 writer-label"><%= count.to_s + " tasks"%></p>
                         </a>
                         <%if @done_writer_dict[id].present?%>
                             <ul id="<%= name + 'done'%>" style="display: none;">
@@ -144,7 +144,7 @@
                                   <%if o.oppty.present?%>
                                     <li id="<%= o.id%>" class="col-md-12">
                                         <h5 class="col-md-11"><%= link_to o.oppty.opptyName, o.oppty%></h5>
-                                        <img id="delete-btn-manager-3" class="btn-x-manager" onclick="deleteOptManager(<%= o.id %>, <%= name + 'ajax' %>, 3)" src="/assets/redx.png" alt="X" border="0"/>
+                                        <img id="delete-btn-manager-3" class="btn-x-manager" onclick="deleteOptManager(<%= o.id %>, <%= name.delete(' ') + 'ajax' %>, 3)" src="/assets/redx.png" alt="X" border="0"/>
                                     </li>
                                    <%end%>
                                 <%end%>
